removed test dependency on javax.xml.bind (java >= 9)