@@ -20,11 +20,10 @@
 
 package com.arangodb.jackson.dataformat.velocypack;
 
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertThat;
+import com.arangodb.velocypack.*;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.Test;
 
 import java.io.IOException;
 import java.lang.annotation.ElementType;
@@ -36,39 +35,11 @@ import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.Set;
-import java.util.TimeZone;
-import java.util.UUID;
 
-import javax.xml.bind.DatatypeConverter;
-
-import org.junit.Test;
-
-import com.arangodb.velocypack.Type;
-import com.arangodb.velocypack.VPack;
-import com.arangodb.velocypack.VPackAnnotationFieldFilter;
-import com.arangodb.velocypack.VPackAnnotationFieldNaming;
-import com.arangodb.velocypack.VPackBuilder;
-import com.arangodb.velocypack.VPackFieldNamingStrategy;
-import com.arangodb.velocypack.VPackInstanceCreator;
-import com.arangodb.velocypack.VPackSlice;
-import com.arangodb.velocypack.ValueType;
-import com.fasterxml.jackson.core.JsonParseException;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.assertThat;
 
 /**
  * @author Mark Vollmary
@@ -3326,12 +3297,12 @@ public class VPackSerializeDeserializeTest {
 		assertThat(vpack, is(notNullValue()));
 		assertThat(vpack.isObject(), is(true));
 		assertThat(vpack.get("foo").isString(), is(true));
-		assertThat(vpack.get("foo").getAsString(), is(DatatypeConverter.printBase64Binary(entity.foo)));
+		assertThat(vpack.get("foo").getAsString(), is(Base64.getEncoder().encodeToString(entity.foo)));
 	}
 
 	@Test
-	public void toBinary() throws JsonParseException, JsonMappingException, IOException {
-		final String value = DatatypeConverter.printBase64Binary("bar".getBytes());
+	public void toBinary() throws IOException {
+		final String value = Base64.getEncoder().encodeToString("bar".getBytes());
 		final VPackSlice vpack = new VPackBuilder().add(ValueType.OBJECT).add("foo", value).close().slice();
 		final BinaryEntity entity = mapper.readValue(vpack.getBuffer(), BinaryEntity.class);
 		assertThat(entity, is(notNullValue()));
